<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorkoutPlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_activity">Settings</string>
    <string name="about_about">Workout Planner has been developed by Sagie Levy &amp; Noam Salomonki</string>
    <string name="about_help">Click here to learn how to use this app</string>
    <string name="about_version">Version 1.0</string>
    <string name="main_about">About</string>
    <string name="select_workout_title">Select Workout</string>
    <string name="play_workout_title">Play Workout</string>
	<string name="dialog_save_workout">Save Workout As</string>
    <string name="dialog_save_confirm">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="enter_file_name">Please enter the name for the workout</string>
    <string name="dialog_confirm_overwrite">Are you sure you want to overwrite the workout?</string>
    <string name="default_exercise_name">Exercise</string>
    <string name="exercise_name_label">Exercise Name</string>
    <string name="empty"></string>
    <string name="comment_label">Comment:</string>
    <string name="exercises_label">Enter Number</string>
    <string name="exercises_default_input">1</string>
    <string name="sound_label">Sound:</string>
    <string name="endless_string">Endless Set</string>
    <string name="edit_element_label">Edit Exercise</string>
    <string name="expand_item">Extra Exercise item data</string>
    <string name="collapse_item">collapse exercise item</string>
    <string name="item_deleted">Item deleted.</string>
    <string name="elements_label">Phases:</string>
    <string name ="default_element_name">New Phase</string>
    <string name="preview_activity_label">Edit Workout</string>
    <string name="reps_label">Reps:</string>
    <string name="weight_label">Weight:</string>
    <string name="infinity">∞</string>
    <string name="dialog_new_element_name">New Phase</string>
    <string name="element_rest_label">Rest</string>
    <string name="element_time_label">Timer</string>
    <string name="element_repetitions_label">Reps</string>
    <string name="new_element_rest">Rest</string>
    <string name="new_element_repetitions">Repetitions</string>
    <string name="new_element_time">Time</string>
    <string name="second_label">Seconds:</string>
    <string name="menu_item_add_exercise">Add Exercise</string>
    <string name="menu_item_save_as">Save As</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_undo">Undo</string>
    <string name="menu_item_sort">sort</string>
    <string name="menu_item_remove">discard</string>
    <string name="menu_create_new_workout">create</string>
    <string name="menu_item_add_element">Add Element</string>
    <string name="popup_menu_item_delete">Delete Item</string>
    <string name="popup_menu_item_move_position">Move Item</string>
    <string name="elements_list_activity_label">Edit Exercise</string>
    <string name="exit_title">Leave Editor</string>
    <string name="exit_context">Are you sure you want to leave without saving</string>
    <string name="delete_workout_context">Are you sure you wish to delete</string>
    <string name="delete_workout_title">Delete Workout</string>
    <string name="new_workout">New</string>
    <string name="rest_offset">Rest Offset (seconds):</string>
    <string name="error_sounds">Error loading sounds</string>
    <string name="save_success">File saved successfully</string>
    <string name="prev_element_text">Previous Element</string>
    <string name="next_element_text">Next Element</string>
    <string name="prev_exercise_text">Previous Exercise</string>
    <string name="next_exercise_text">Next Exercise</string>
    <string name="none_exercise_text">None</string>
    <string name="finish_rep">Finish Rep</string>
    <string name="workout_finished">Workout Completed!</string>
    <string name="empty_workout">Empty workout</string>
</resources>