<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_add_element"
        android:icon="@drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/menu_item_add_element"/>
    <item
        android:id="@+id/menu_item_save"
        android:icon="@drawable/ic_content_save"
        android:showAsAction="always"
        android:title="@string/menu_item_save"/>
    <item
        android:id="@+id/menu_item_undo"
        android:icon="@drawable/ic_content_undo_dark"
        android:showAsAction="always"
        android:title="@string/menu_item_undo"/>
    <item
        android:id="@+id/menu_item_sort"
        android:icon="@drawable/align_just_icon24_white"
        android:showAsAction="always"
        android:title="@string/menu_item_sort"/>

</menu>