<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preview_set_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whiteish"
    android:gravity="center_horizontal|top"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@id/drag_handle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@drawable/align_just_icon24_black" />

        <TextView
            android:id="@+id/previewSetNameLabel"
            style="@style/small_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_exercise_name" />

        <Space
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/previewRepetitionsInput"
            style="@style/small_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercises_default_input" />
    </LinearLayout>

    <View
        android:id="@+id/hairline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#28ffffff" />

    <FrameLayout
        android:id="@+id/infoArea"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingStart="16dp" >

        <ImageView
            android:id="@+id/expand"
            android:layout_width="48dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:contentDescription="@string/expand_item"
            android:src="@drawable/ic_expand_down" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/expandArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/previewSetCommentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_label" />

            <EditText
                android:id="@+id/previewSetCommentInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/previewSetSoundLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_label" />

			<Spinner 
			    android:id="@+id/previewSetSoundInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/previewSetElements"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/elements_label" />

            <LinearLayout
                android:id="@+id/previewData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/previewSetAddElements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_element_label" />

        <View
            android:id="@+id/hairline2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="#28ffffff" />

        <FrameLayout
            android:id="@+id/collapse"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:clickable="true"
            android:contentDescription="@string/collapse_item" >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:contentDescription="@string/collapse_item"
                android:src="@drawable/ic_expand_up" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>