<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@id/drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/align_just_icon24_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/previewElementName"
                style="@style/smaller_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_element_name" />

            <Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_label" />

            <TextView
                android:id="@+id/previewElementTime"
                style="@style/smaller_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercises_default_input" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/previewSetCommentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_label" />

            <EditText
                android:id="@+id/previewElementComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <!-- Not allowing user to select sound for now. Option still exists -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/previewSetSoundLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_label" />

            <Spinner
                android:id="@+id/previewSetSoundInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>